# rust-generic-mutability

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README  README.md
src/: compile_fail_tests.rs  conv_traits.rs  erased_mut_ref.rs  erased_mutability_ref.rs  gen_struct.rs  genref.rs  genref_enum.rs  genref_macro.rs  lib.rs  macros.rs  mutability.rs  primitives.rs
src/genref/: genref_methods.rs  impl_traits.rs
tests/: test.rs
