[package]
name = "generic-mutability"
version = "0.1.0"
edition = "2021"
description = "Allows the creation of APIs that are generic over mutability"
authors = ["Zsombor Farkas <zsombor0305fzs@gmail.com>"]
repository = "https://github.com/fzs111/rust-generic-mutability/"
exclude = [".vscode"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["mutability", "mutable", "generic"]
categories = ["rust-patterns", "no-std::no-alloc"]

[dependencies]

[features]
std = []
